[tool.poetry]
name = "clavier"
version = "0.2.0-dev"
description = "A light and not-so-bright CLI framework for Python"
authors = [
  "nrser <neil@neilsouza.com>"
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
]
include = [
  "LICENSE",
  "entrypoint/src",
  "entrypoint/Cargo.toml",
]
packages = [
  {include = "clavier"},
]

[tool.poetry.urls]
Homepage = "https://github.com/nrser/clavier"

[tool.poetry.dependencies]
python = "^3.10"

# Pretty terminal printing
#
# Change `rich.console.RenderGroup` -> `rich.console.Group` is v10+
rich = ">=10.0"

# Automatic argument completion for `builtins.argparse`
argcomplete = ">=1.12.1,<2"

# Used for _creating_ Markdown, believe it or not
mdutils = ">=1.3.0,<2"

# Sorted containers used in `clavier.cfg`
sortedcontainers = ">=2.3.0,<3"

# Logging
splatlog = ">=0.3.1"

# Actually just used to parse env variable values
pyyaml = ">=5"

# Usefull helpers
more-itertools = "^9.0.0"

# Parsing Markdown. Dependency of `rich` already
commonmark = "^0.9.0"
markdown-it-py = "^2.1.0"

# Used to watch for changes in server-mode
watchfiles = "^0.18.1"

# Used to parse Cargo config files
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

# `dr.t` command to run doctests
[tool.poetry.group.dev.dependencies.doctor-testerson]
version = "^0.1.0"
# git = "https://github.com/nrser/doctor-testerson.git"
# path = "../doctor-testerson"
# develop = true

# API documentation generation helpers
[tool.poetry.group.dev.dependencies.doctor-genova]
git = "https://github.com/nrser/doctor-genova.git"
# path = "../doctor-genova"
# develop = true

[tool.poetry.group.notes.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
