[package]
name = "clavier-srv-entrypoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
nix = "0.26.2"
sendfd = "0.4.3"
serde_json = "1.0.91"
log = "0.4.0"
env_logger = "0.9.0"
serde = { version = "1.0.152", features = ["derive"] }
