[tool.poetry]
name = "clavier-example"
version = "0.0.0"
description = "Example stuff for Clavier package"
authors = ["nrser <neil@neilsouza.com>"]
readme = "README.md"
packages = [
  {include = "clavier_example"},
]

[tool.poetry.dependencies]
python = "^3.10"

# Automatic argument completion for `builtins.argparse`
argcomplete = ">=1.12.1,<2"

clavier = {path = "..", develop = true}

[tool.poetry.scripts]
example = "clavier_example.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
